changed password input type

--- a/Labs/Week 4 Lab-WebDev_HTML_CSS/CS2701-Week4-Registration.html
+++ b/Labs/Week 4 Lab-WebDev_HTML_CSS/CS2701-Week4-Registration.html
@@ -44,10 +44,10 @@
                     <input type="text" id="email" name="email"><br><br>
 
                     <label for="password">Password:</label><br>
-                    <input type="text" id="password" name="password"><br><br>
+                    <input type="password" id="password" name="password"><br><br>
 
                     <label for="repassword">Re-enter Password:</label><br>
-                    <input type="text" id="repassword" name="repassword"><br><br>
+                    <input type="password" id="repassword" name="repassword"><br><br>
 
                     <input type="checkbox" id="buyer" name="buyer" value="buyer">
                     <label for="buyer">I want to buy produce directly from allotment owners.</label><br>
