Updated css to add flexible container, changed widths of section and aside

--- a/Labs/Week 4 Lab-WebDev_HTML_CSS/CS2701-Week4-Registration.html
+++ b/Labs/Week 4 Lab-WebDev_HTML_CSS/CS2701-Week4-Registration.html
@@ -23,6 +23,7 @@
         <main>
             <!-- Check Week 4 Lecture to learn about HTML5 semantic elements-->
             <aside>
+                <input type="text" id="search" name="search" placeholder="Search">
             </aside>
             <section>
                 <form class="center" novalidate>
